[package]
name = "potions_balance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.19"
csv = "1.1.6"
either = "1.8.0"
encoding = "0.2.33"
esl = "0.9.7"
filetime = "0.2.18"
rust-ini = "0.18.0"
