[package]
edition = "2021"
name = "espb"
version = "0.0.2"
#rust-version = "nightly"
authors = ["warlock <internalmike@gmail.com>"]
description = "Morrowind potions attributes balancing tool."
readme = "README.md"
keywords = ["alchemy", "esp", "openmw", "mw", "potions"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/espb"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[dependencies]
clap = "4.0.19"
csv = "1.1.6"
either = "1.8.0"
encoding = "0.2.33"
esl = "0.16.0"
filetime = "0.2.18"
rust-ini = "0.18.0"

[badges]
maintenance = { status = "actively-developed" }
